# kokoro-tts

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: simple.py
src/kokoro_tts/: __init__.py  kokoro.py
