[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kokoro_tts"]

[project]
name = "kokoro-tts"
version = "0.1.0"
description = "An easy installation to Kokoro Text-to-speech ONNX model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime>=1.20.1",
    "phonemizer>=3.3.0",
    "requests>=2.32.3",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "soundfile>=0.13.0",
]
